# Hanzel_engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
application/: CMakeLists.txt
application/src/: ClientApp.cpp
hanzel/: CMakeLists.txt
hanzel/include/for_client/: Hanzel.h
hanzel/include/hanzel/: Application.h  Core.h  EntryPoint.h  Log.h
hanzel/src/: Application.cpp  Log.cpp
